auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-service # matching the metadata labels
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-container
          image: codingsprints/mern-space-auth-service-prod:build-23
          ports:
            - containerPort: 5001
          # envFrom:
          #   - secretRef:
          #       name: auth-env-secret
          volumeMounts:
            - name: auth-jwks
              mountPath: "/home/node/app/public/.well-known"
              readOnly: true
            - name: private-key
              mountPath: "/home/node/app/certs"
              readOnly: true
            - name: environment
              mountPath: "/home/node/app/.env.production"
              subPath: ".env.production"
      volumes:
        - name: auth-jwks
          configMap:
            name: auth-jwks
        - name: private-key
          secret:
            secretName: auth-private-key
        - name: environment
          secret:
            secretName: auth-env-secret

---
apiVersion: v1
kind: Service
metadata:
  name: "auth-service"
spec:
  selector:
    app: auth-service # same as mach leabels in deployment
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
