auth-service/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mernspace-auth-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, PATCH, GET, POST, OPTIONS, HEAD"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://*.pizzaria.store"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # - path: /api/auth(/|$)(.*)
          - path: /pizza/auth/api/v1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service #same service name as deployment service
                port:
                  number: 5001
